和传统方法进行比较的功能实现，尚未实现比较图片的删除

--- a/app/templates/imagedetail.html
+++ b/app/templates/imagedetail.html
@@ -27,8 +27,10 @@
             <li><a href="#">3x</a></li>
             </ul>
          </div>
-        {% if img.action!='Origin'%}
+        {% if img.action=='SRCNN'%}
         <button type="button" class="comparebtn btn btn-primary">比较图片</button>
+        {% elif img.action!='superresolution' and img.action!='Origin'%}
+        <button type="button" class="comparebtn btn btn-primary">比较放大图片</button>
         {% endif %}
         <div id="myAlert" class="alert alert-danger hide">
             <strong></strong>
