--- a/app/templates/superresolution.html
+++ b/app/templates/superresolution.html
@@ -28,6 +28,9 @@
         </div>
     </div>
     <div class="modal-footer">
-         <button type="button" class="btn btn-primary">优化图片</button>
+         <button type="button" class="basesuperbtn btn btn-warning">优化图片</button>
+         <div id="baseAlert" class="alert alert-danger hide">
+            <strong></strong>
+         </div>
     </div>
 </div>
