完成部分动态模块的功能

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a href="/">首页</a></li>
-                <li><a href="">发布动态</a></li>
+                <li><a href="/dynamic/adddynamic">发布动态</a></li>
                 <li><a href="#"  class='basebtn' id="uploadbtn">图像上传</a></li>
                 <li><a href="#"  class='basebtn' id="superresolutionbtn">图像优化</a></li>
             </ul>
@@ -63,4 +63,5 @@
 <script type="text/javascript" src="../static/js/base.js"></script>
 <script type="text/javascript" src="../static/js/fileinput.min.js"></script>
 <script type="text/javascript" src="../static/js/zh.js"></script>
+<script type="text/javascript" src="../static/js/jqthumb.js"></script>
 {% endblock %}
