--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,2 +1,58 @@
 {% extends "base.html" %}
 {% block title %}index{% endblock %}
+{% block styles %}
+<link type="text/css" href="{{ url_for('static',filename='css/index.css') }}" rel="stylesheet">
+{{super()}}
+{% endblock %}
+{% block container%}
+<div class="main">
+    {% for dynamic in indexlist%}
+    <div class="panel panel-default">
+        <input type="hidden" value="{{dynamic['id']}}">
+        <div class="panel-heading">
+            <img src="{{dynamic['headurl']}}" class="img-circle head"/>
+            <label>{{dynamic['name']}}</label>
+            <label class="pull-right time">{{dynamic['time']}}</label>
+        </div>
+        <div class="panel-body">
+            <div> {{dynamic['content']}}
+            </div>
+            <div class="row">
+                {% for img in dynamic['imgs'] %}
+                <div class="col-sm-4 col-md-4">
+                    <div class="thumbnail">
+                        <img src="{{img}}" class=" dynmaicimg">
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+            <div class="action">
+                <label>点赞</label>&nbsp;&nbsp;&nbsp;
+                <label>评论</label>&nbsp;&nbsp;&nbsp;
+                <label>编辑</label>
+            </div>
+        </div>
+        <div class="panel-footer">
+            <ul class="list-unstyled">
+                <li><label><a>马天成</a>：啊啊啊啊啊，啦啦啦啦，这个动态真有意思</label></li>
+                <!--<li><label><a>黄天浩</a>：啊啊啊啊啊，啦啦啦啦，这个动态真有意思</label></li>
+                <li><label><a>我</a>回复<a>黄天浩</a>：啊啊啊啊啊，啦啦啦啦，这个动态真有意思</label></li>
+                <li><label><a>黄天浩</a>回复<a>我</a>：啊啊啊啊啊，啦啦啦啦，这个动态真有意思</label></li>
+                <li><label><a>马天成</a>：啊啊啊啊啊，啦啦啦啦，这个动态真有意思</label></li>-->
+            </ul>
+            <form class="form-inline">
+                <div class="form-group">
+                     <input type="text" class="form-control" style="width:780px" id="name"placeholder="写出你的想法">
+                     <button type="button" class="btn btn-primary commentbtn">评论</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    {% endfor %}
+</div>
+{% endblock %}
+{% block scripts %}
+{{super()}}
+<script type="text/javascript" src="../static/js/dynamic.js"></script>
+<script type="text/javascript" src="../static/js/comment.js"></script>
+{% endblock %}
