--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -14,6 +14,6 @@
     position: relative;
     margin: 0px 0px 0px 700px;
 }
-.commentlabel{
+.commentlabel,.likelabel,.updatelabel{
     cursor:pointer
 }
