--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,9 +27,13 @@
                 {% endfor %}
             </div>
             <div class="action">
-                <label class="like">点赞</label>&nbsp;&nbsp;&nbsp;
+                {% if dynamic['likeflag'] %}
+                <label class="likelabel">已点赞({{dynamic['likecount']}})</label>&nbsp;&nbsp;
+                {% else:%}
+                <label class="likelabel">点赞</label>&nbsp;&nbsp;&nbsp;
+                {% endif%}
                 <label class="commentlabel">评论</label>&nbsp;&nbsp;&nbsp;
-                <label>编辑</label>
+                <label class="updatelabel">编辑</label>
             </div>
         </div>
         <div class="panel-footer commentpart">
