--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -11,12 +11,8 @@
 			<label class="text-success username">{{user.nickname}}</label>
 			<div class="numdiv">
 				<div class="numdivs">
-					<label class="numname text-success">动态数</label>
-					<a class="num">100</a>
-				</div>
-				<div class="numdivs">
 					<label class="numname text-success">获赞数</label>
-					<a class="num">200</a>
+					<a class="num">{{likecount}}</a>
 				</div>
 				<div class="numdivs">
 					<label class="numname text-success">关注</label>
@@ -51,6 +47,57 @@
 	<input type="radio" id="r-1" name="tab" checked>
 	<label for="r-1" class="tab-label" id="dynamictab">个人空间</label>
 	<div class="mod">
+		{% for dynamic in userlist%}
+    		<div class="panel panel-default">
+                <input type="hidden" value="{{dynamic['id']}}">
+                <div class="panel-heading">
+                    <label class="time">{{dynamic['time']}}</label>
+                </div>
+        <div class="panel-body">
+            <div> {{dynamic['content']}} &nbsp;&nbsp;{% if dynamic['flag'] %}<label class="more"><a>全文</a></label>{% endif%}
+            </div>
+            <div class="row">
+                {% for img in dynamic['imgs'] %}
+                <div class="col-sm-4 col-md-4">
+                    <div class="thumbnail">
+                        <img src="{{img}}" class=" dynmaicimg">
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+            <div class="action">
+                {% if dynamic['likeflag'] %}
+                <label class="likelabel">已点赞({{dynamic['likecount']}})</label>&nbsp;&nbsp;
+                {% else:%}
+                <label class="likelabel">点赞</label>&nbsp;&nbsp;&nbsp;
+                {% endif%}
+                <label class="commentlabel">评论</label>&nbsp;&nbsp;&nbsp;
+                <label class="updatelabel">编辑</label>
+            </div>
+        </div>
+        <div class="panel-footer commentpart">
+            <ul class="list-unstyled">
+                {% for comment in dynamic['comments'] %}
+                <li id="{{comment['id']}}" class="commentli">
+                    <label >
+                        <a id="{{comment['userid']}}" href="/user/{{comment['userid']}}"
+                           class="answer">{{comment['name']}}</a>
+                        {% if comment['actorname']!='-1'%}
+                        对<a>&nbsp;{{comment['actorname']}}</a> 回复
+                        {% endif%}
+                        ：<span class="comment">{{comment['content']}}</span>
+                    </label>
+                    <span class="pull-right glyphicon glyphicon-remove hide remove"></span>
+                </li>
+                {% endfor %}
+            </ul>
+            <div class="form-inline">
+                 <input type="text" class="form-control" style="width:780px" id="name" placeholder="写出你的想法">
+                 <button type="button" class="btn btn-primary commentbtn">评论</button>
+            </div>
+        </div>
+    </div>
+    	{% endfor %}
 	</div>
 	<input type="radio" id="r-2" name="tab">
 	<label for="r-2" class="tab-label" id="albumtab">用户相册</label>
@@ -65,4 +112,6 @@
 {% block scripts %}
 {{super()}}
 <script type="text/javascript" src="../static/js/user.js"></script>
+<script type="text/javascript" src="../static/js/dynamic.js"></script>
+<script type="text/javascript" src="../static/js/comment.js"></script>
 {% endblock %}
