初步完成了feed流新鲜事功能

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,9 +26,9 @@
                 <ul class="dropdown-menu">
                     <li><a href="/user/myspace"><span class="glyphicon glyphicon-user"></span>个人空间</a></li>
                     <li class="divider"></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-heart"></span>我的关注</a></li>
+                    <li><a href="/user/feed"><span class="glyphicon glyphicon-heart"></span>我的关注</a></li>
                     <li class="divider"></li>
-                    <li><a href="/user/message"><span class="glyphicon glyphicon-envelope"></span>私信{{current_user.noreadmsg}}</a></li>
+                    <li><a href="/user/message"><span class="glyphicon glyphicon-envelope"></span>私信</a></li>
                     <li class="divider"></li>
                     <li><a href="#"><span class="glyphicon glyphicon-asterisk"></span>编辑</a></li>
                     <li class="divider"></li>
