--- a/app/templates/adddynamic.html
+++ b/app/templates/adddynamic.html
@@ -27,5 +27,5 @@
 {% endblock %}
 {% block scripts %}
 {{super()}}
-<script type="text/javascript" src="../static/js/dynamic.js"></script>
+<script type="text/javascript" src="../static/js/adddynamic.js"></script>
 {% endblock %}
