--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
     <div class="panel panel-default">
         <input type="hidden" value="{{dynamic['id']}}">
         <div class="panel-heading">
-            <img src="{{dynamic['headurl']}}" class="img-circle head"/>
+            <a href="/user/{{dynamic['userid']}}"><img src="{{dynamic['headurl']}}" class="img-circle head"/></a>
             <label>{{dynamic['name']}}</label>
             <label class="pull-right time">{{dynamic['time']}}</label>
         </div>
