--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -114,5 +114,5 @@
 {{super()}}
 <script type="text/javascript" src="../static/js/user.js"></script>
 <script type="text/javascript" src="../static/js/dynamic.js"></script>
-<script type="text/javascript" src="../static/js/comment.js"></script>
+<script type="text/javascript" src="../static/js/userdynamic.js"></script>
 {% endblock %}
