--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -64,4 +64,5 @@
 {% block scripts %}
 {{super()}}
 <script type="text/javascript" src="../static/js/dynamic.js"></script>
+<script type="text/javascript" src="../static/js/indexdynamic.js"></script>
 {% endblock %}
