--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -73,7 +73,7 @@
                 <label class="likelabel">点赞</label>&nbsp;&nbsp;&nbsp;
                 {% endif%}
                 <label class="commentlabel">评论</label>&nbsp;&nbsp;&nbsp;
-                <label class="updatelabel">编辑</label>
+                <label class="deletelabel">删除</label>
             </div>
         </div>
         <div class="panel-footer commentpart">
