完善私信模块，图片预览

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -56,8 +56,13 @@
         <div id="basesuperresolutionmodel-part" class="modal-dialog">
         </div>
     </div>
+    <!--警告框-->
      <div class="modal fade" id="alertmodel" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div id="alertmodel-part" class="modal-dialog">
+        </div>
+    </div>
+    <div class="modal fade" id="dynamicimgmodel" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div id="dynamicimgmodel-part" class="modal-dialog">
         </div>
     </div>
 </div>
