--- a/app/templates/otheruser.html
+++ b/app/templates/otheruser.html
@@ -18,7 +18,7 @@
                     <div class="row">
                         {% for img in dynamic['imgs'] %}
                         <div class="col-sm-4 col-md-4">
-                            <div class="thumbnail">
+                            <div class="thumbnail dynamicimg">
                                 <img src="{{img}}" class=" dynmaicimg">
                             </div>
                         </div>
