--- a/app/static/css/user.css
+++ b/app/static/css/user.css
@@ -122,6 +122,6 @@ input[type=radio]:checked+label+div {
     position: relative;
     margin: 0px 0px 0px 750px;
 }
-.commentlabel,.likelabel,.deletelabel{
+.commentlabel,.likelabel,.deletelabel,.dynamicimg{
     cursor:pointer
 }
