项目监控，SRCNN读取的修改

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,6 +16,7 @@
                 <li><a href="/dynamic/adddynamic">发布动态</a></li>
                 <li><a href="#"  class='basebtn' id="uploadbtn">图像上传</a></li>
                 <li><a href="#"  class='basebtn' id="superresolutionbtn">图像优化</a></li>
+                <li><a href="/statistics">系统统计</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
